--- a/examples/example4_new/addm_inference.ipynb
+++ b/examples/example4_new/addm_inference.ipynb
@@ -97,7 +97,6 @@
     "\n",
     "from efficient_fpt.multi_stage_cy import compute_loss_parallel, print_num_threads\n",
     "\n",
-    "\n",
     "data = pickle.load(open(\"addm_data_20251015-163921.pkl\", \"rb\"))"
    ]
   },
@@ -1203,7 +1202,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cddm",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1217,9 +1216,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
