--- a/mia.ipynb
+++ b/mia.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "fbe4a39f",
    "metadata": {},
    "outputs": [],
@@ -64,23 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "9c07c350-257f-420a-bb96-aef0e8e2a496",
+   "execution_count": 12,
+   "id": "9231da8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100000"
+       "array([ 0.95, -0.1 ,  0.95, -0.1 ,  0.95, -0.1 ,  0.95,  0.  ,  0.  ,\n",
+       "        0.  ,  0.  ,  0.  ,  0.  ])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_data"
+    "mu_true_data[0]"
    ]
   },
   {
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "4442645e-c1ae-44eb-9992-e4856f7a2d1e",
    "metadata": {},
    "outputs": [],
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "d08e5437-3753-4216-b236-49cf078a9027",
    "metadata": {},
    "outputs": [],
@@ -159,17 +160,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "f9cd169e-c479-4805-bdb1-df1e16878c21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub_id</th>\n",
+       "      <th>trial</th>\n",
+       "      <th>avgWTP_left</th>\n",
+       "      <th>avgWTP_right</th>\n",
+       "      <th>choice</th>\n",
+       "      <th>RT</th>\n",
+       "      <th>fixation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>empirical_efpt</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4173.195</td>\n",
+       "      <td>(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>empirical_efpt</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1738.365</td>\n",
+       "      <td>(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>empirical_efpt</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>865.665</td>\n",
+       "      <td>(2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>empirical_efpt</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>553.455</td>\n",
+       "      <td>(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>empirical_efpt</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>388.735</td>\n",
+       "      <td>(2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           sub_id  trial  avgWTP_left  avgWTP_right  choice        RT  \\\n",
+       "0  empirical_efpt      1          4.0           3.0       0  4173.195   \n",
+       "1  empirical_efpt      2          3.0           1.0       0  1738.365   \n",
+       "2  empirical_efpt      3          4.0           1.0       0   865.665   \n",
+       "3  empirical_efpt      4          5.0           4.0       0   553.455   \n",
+       "4  empirical_efpt      5          1.0           3.0       1   388.735   \n",
+       "\n",
+       "                                            fixation  \n",
+       "0  (1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...  \n",
+       "1  (1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...  \n",
+       "2  (2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, ...  \n",
+       "3  (1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...  \n",
+       "4  (2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, ...  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "efpt_fixations = [tuple(x + 1 for x in t) for t in expanded_fixations]\n"
+    "import pandas as pd\n",
+    "\n",
+    "efpt_fixations = [tuple(x + 1 for x in t) for t in expanded_fixations]\n",
+    "\n",
+    "efpt_df = pd.DataFrame({\n",
+    "    'sub_id': 'empirical_efpt',\n",
+    "    'trial': range(1, num_data + 1),\n",
+    "    'avgWTP_left': r1_data,\n",
+    "    'avgWTP_right': r2_data,\n",
+    "    'choice': (1 - choice_data) // 2,\n",
+    "    'RT': rt_data * 1000,\n",
+    "    'fixation': efpt_fixations\n",
+    "})\n",
+    "\n",
+    "efpt_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "9f18518b-6e90-4619-a6b5-acf77c77e4d1",
    "metadata": {},
    "outputs": [
@@ -201,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "7af92a40-fbfb-4bfa-93c8-216e4da88270",
    "metadata": {},
    "outputs": [],
@@ -266,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "00d6b947-9331-4b70-9bbf-5aa584d76523",
    "metadata": {},
    "outputs": [],
@@ -276,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "e92b2ead-a558-4c65-91dd-3ea94766f271",
    "metadata": {},
    "outputs": [
@@ -321,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "fea0abab-c2f8-4d74-a715-b2c19a631bc9",
    "metadata": {},
    "outputs": [],
@@ -398,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "188cc67a-c654-441f-b2b1-30478a6fe3f2",
    "metadata": {},
    "outputs": [],
@@ -423,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "b734d493-1e76-4767-8561-70844c891e0f",
    "metadata": {},
    "outputs": [
@@ -564,7 +685,7 @@
        "4       2089     2573             1      484        3            1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "57d3ec69-07f0-41c6-9dd6-e634b71fdd20",
    "metadata": {},
    "outputs": [],
@@ -607,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "1d7f4a3c-8aae-412e-ac20-a8fe31e5a61d",
    "metadata": {},
    "outputs": [
@@ -647,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "9887b110-ee10-4bc9-9041-532078b6fc04",
    "metadata": {},
    "outputs": [
@@ -758,7 +879,7 @@
        "4  (4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, ...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "61447b81-2efc-4cca-b3f0-9a79c1c56e8c",
    "metadata": {},
    "outputs": [
@@ -874,7 +995,7 @@
        "4  (2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, ...  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "2d225b68-9dc0-40f9-81c6-af7df6d4d0ff",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1151,7 @@
        "4     3729             2      394        5            2  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "0565b136-e73c-4fde-bffa-4db9cf80a466",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "DDM",
    "language": "python",
    "name": "python3"
   },
