Post loaner update: verified package suitability, working on recovery and such

--- a/examples/example4_new/addm_gen_data.ipynb
+++ b/examples/example4_new/addm_gen_data.ipynb
@@ -359,12 +359,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "mu_data_padded = np.array([np.pad(mu_array, (0, max_len - len(mu_array)), mode='constant') for mu_array in mu_data])\n",
-    "sacc_data_padded = np.array([np.pad(sacc_array, (0, max_len - len(sacc_array)), mode='constant') for sacc_array in sacc_data])\n"
+    "sacc_data_padded = np.array([np.pad(sacc_array, (0, max_len - len(sacc_array)), mode='constant') for sacc_array in sacc_data])"
    ]
   },
   {
