--- a/empirical_addm_inference.ipynb
+++ b/empirical_addm_inference.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "65a3f13b",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,21 @@
     "    paras[3],\n",
     "    paras[4],\n",
     ")\n",
-    "bounds = Bounds([0, 0, 0, 0, -np.inf], [1, np.inf, np.inf, np.inf, np.inf])\n",
+    "# Bounds\n",
+    "# [eta, kappa, a, b, x0]\n",
+    "# where a and b represent linear collapsing symmetrical bounds\n",
+    "\n",
+    "# Original:\n",
+    "# bounds = Bounds(\n",
+    "#     [0, 0, 0, 0, -np.inf], # lower\n",
+    "#     [1, np.inf, np.inf, np.inf, np.inf] # upper \n",
+    "# )\n",
+    "\n",
+    "# Modified:\n",
+    "bounds = Bounds(\n",
+    "    [0, 0, 0, 0, 0], # lower\n",
+    "    [1, np.inf, np.inf, 0, 0] # upper \n",
+    ")\n",
     "con = LinearConstraint(\n",
     "    [[0, 0, 1, -np.max(rt_data), 0], [0, 0, 1, 0, 1], [0, 0, 1, 0, -1]],\n",
     "    lb=[0, 0, 0],\n",
