--- a/empirical_addm_inference.ipynb
+++ b/empirical_addm_inference.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "import os, sys\n",
     "\n",
-    "DDM_dir = os.path.abspath('/Users/bchien37/Desktop/Enkavilab/DDM')\n",
+    "DDM_dir = os.path.abspath('/Users/braydenchien/Desktop/Enkavilab/DDM')\n",
     "sys.path.append(DDM_dir)\n",
     "\n",
     "dt = 0.001"
@@ -51,12 +51,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "df_raw = pd.read_csv('/Users/bchien37/Desktop/Enkavilab/DDM/1ms_trial_data.csv')\n",
+    "df_raw = pd.read_csv('/Users/braydenchien/Desktop/Enkavilab/DDM/1ms_trial_data.csv')\n",
     "df_raw['choice'] = df_raw['choice'].map({'left':0,'right':1})\n",
     "df_raw['RT'] = df_raw['RT'] / dt # adjustment for RT\n",
     "df_raw['fixation'] = df_raw['fixation'].apply(literal_eval)\n",
     "\n",
-    "to_drop = pd.read_csv(\"/Users/bchien37/Desktop/Enkavilab/DDM/dropped_trials.csv\").rename(columns={\"parcode\": \"sub_id\"})\n",
+    "to_drop = pd.read_csv(\"/Users/braydenchien/Desktop/Enkavilab/DDM/dropped_trials.csv\").rename(columns={\"parcode\": \"sub_id\"})\n",
     "\n",
     "df = df_raw[\n",
     "    ~df_raw.set_index([\"sub_id\", \"trial\"]).index.isin(\n",
@@ -96,10 +96,10 @@
    "outputs": [],
    "source": [
     "# Defining constants\n",
-    "a, b = 2.1, 0.3\n",
+    "a, b = 1, 0\n",
     "eta = 0.5\n",
     "kappa = 2\n",
-    "T = a/b / dt # Bounded by Markov w/p 0.9, E[T] = 2.5, in this case, in ms\n",
+    "T = 25 / dt # Bounded by Markov w/p 0.9, E[T] = 2.5, in this case, in ms\n",
     "x0 = 0\n",
     "sigma = 0.7 # As calculated from Eum et al. (2023)\n",
     "\n",
@@ -123,8 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available jobs: 10\n",
-      "Elapsed time: 80.278 seconds\n"
+      "Available jobs: 8\n",
+      "Elapsed time: 214.204 seconds\n"
      ]
     }
    ],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "f4f4a5cc",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "e09842e8",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of available threads: 10\n",
+      "Number of available threads: 8\n",
       "# data = 18758\n"
      ]
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "37b01ba2",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Likelihood evaluation time: 0.214 s\n"
+      "Likelihood evaluation time: 0.168 s\n"
      ]
     }
    ],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "65a3f13b",
    "metadata": {},
    "outputs": [
@@ -353,62 +353,85 @@
       "\n",
       "Numerical optimization for eta, kappa, a, b, x0:\n",
       "Using trust-constr\n",
-      "Initial guess: [0.5, 1, 1.0, 0.0, 0.0]\n",
+      "Initial guess: [0.5, 1, 1.0]\n",
       "\n",
       "`gtol` termination condition is satisfied.\n",
-      "Number of iterations: 60, function evaluations: 396, CG iterations: 139, optimality: 6.32e-09, constraint violation: 0.00e+00, execution time: 8.7e+01 s.\n",
-      "Total time: 88.414 seconds\n",
+      "Number of iterations: 33, function evaluations: 92, CG iterations: 61, optimality: 4.86e-09, constraint violation: 0.00e+00, execution time: 1.7e+01 s.\n",
+      "Total time: 17.342 seconds\n",
       "           message: `gtol` termination condition is satisfied.\n",
       "           success: True\n",
       "            status: 1\n",
-      "               fun: 0.8105566071835106\n",
-      "                 x: [ 9.917e-01  7.842e-01  1.523e+00  2.193e-01 -3.408e-01]\n",
-      "               nit: 60\n",
-      "              nfev: 396\n",
-      "              njev: 66\n",
+      "               fun: 0.6742021889224282\n",
+      "                 x: [ 9.991e-01  5.714e-01  7.220e-01]\n",
+      "               nit: 33\n",
+      "              nfev: 92\n",
+      "              njev: 23\n",
       "              nhev: 0\n",
-      "          cg_niter: 139\n",
-      "      cg_stop_cond: 4\n",
-      "              grad: [-1.170e-06  1.490e-08 -2.445e-08  6.706e-08 -7.451e-09]\n",
-      "   lagrangian_grad: [-6.434e-11  4.680e-09 -6.324e-09 -9.233e-10 -2.688e-09]\n",
-      "            constr: [array([ 1.116e-01,  1.183e+00,  1.864e+00]), array([ 9.917e-01,  7.842e-01,  1.523e+00,  2.193e-01,\n",
-      "                           -3.408e-01])]\n",
-      "               jac: [array([[ 0.000e+00,  0.000e+00, ..., -6.439e+00,\n",
-      "                             0.000e+00],\n",
-      "                           [ 0.000e+00,  0.000e+00, ...,  0.000e+00,\n",
-      "                             1.000e+00],\n",
-      "                           [ 0.000e+00,  0.000e+00, ...,  0.000e+00,\n",
-      "                            -1.000e+00]], shape=(3, 5)), array([[ 1.000e+00,  0.000e+00, ...,  0.000e+00,\n",
-      "                             0.000e+00],\n",
-      "                           [ 0.000e+00,  1.000e+00, ...,  0.000e+00,\n",
-      "                             0.000e+00],\n",
-      "                           ...,\n",
-      "                           [ 0.000e+00,  0.000e+00, ...,  1.000e+00,\n",
-      "                             0.000e+00],\n",
-      "                           [ 0.000e+00,  0.000e+00, ...,  0.000e+00,\n",
-      "                             1.000e+00]], shape=(5, 5))]\n",
-      "       constr_nfev: [0, 0]\n",
-      "       constr_njev: [0, 0]\n",
-      "       constr_nhev: [0, 0]\n",
-      "                 v: [array([ 1.209e-08,  4.711e-09, -5.227e-11]), array([ 1.170e-06, -1.022e-08,  1.380e-09,  9.862e-09,\n",
-      "                            0.000e+00])]\n",
+      "          cg_niter: 61\n",
+      "      cg_stop_cond: 1\n",
+      "              grad: [-1.553e-05  1.490e-08  0.000e+00]\n",
+      "   lagrangian_grad: [-2.968e-12 -7.432e-10 -4.860e-09]\n",
+      "            constr: [array([ 9.991e-01,  5.714e-01,  7.220e-01])]\n",
+      "               jac: [<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
+      "                    \twith 3 stored elements and shape (3, 3)>]\n",
+      "       constr_nfev: [0]\n",
+      "       constr_njev: [0]\n",
+      "       constr_nhev: [0]\n",
+      "                 v: [array([ 1.553e-05, -1.564e-08, -4.860e-09])]\n",
       "            method: tr_interior_point\n",
-      "        optimality: 6.3239199303591954e-09\n",
+      "        optimality: 4.859875594672846e-09\n",
       "  constr_violation: 0.0\n",
-      "    execution_time: 87.05593013763428\n",
-      "         tr_radius: 0.1\n",
+      "    execution_time: 16.636030912399292\n",
+      "         tr_radius: 68359375.0\n",
       "    constr_penalty: 1.0\n",
-      " barrier_parameter: 2.048000000000001e-09\n",
-      " barrier_tolerance: 2.048000000000001e-09\n",
-      "             niter: 60\n"
+      " barrier_parameter: 1.0240000000000006e-08\n",
+      " barrier_tolerance: 1.0240000000000006e-08\n",
+      "             niter: 33\n"
      ]
     }
    ],
    "source": [
+    "# ============================================================\n",
     "# Constraint optimization for searching all parameters\n",
+    "# ============================================================\n",
+    "\n",
     "print(\"\\nNumerical optimization for eta, kappa, a, b, x0:\")\n",
     "method = \"trust-constr\"\n",
     "print(\"Using \" + method)\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# ORIGINAL 5-PARAMETER OBJECTIVE (COMMENTED OUT)\n",
+    "# ------------------------------------------------------------\n",
+    "# func = lambda paras: compute_loss_parallel(\n",
+    "#     paras[1] * (r1_data - paras[0] * r2_data),\n",
+    "#     paras[1] * (paras[0] * r1_data - r2_data),\n",
+    "#     rt_data,\n",
+    "#     choice_data,\n",
+    "#     flag_data,\n",
+    "#     sacc_data,\n",
+    "#     length_data,\n",
+    "#     max_d,\n",
+    "#     sigma,\n",
+    "#     paras[2],\n",
+    "#     paras[3],\n",
+    "#     paras[4],\n",
+    "# )\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# UPDATED OBJECTIVE: REDUCED PARAMETER SPACE\n",
+    "# ------------------------------------------------------------\n",
+    "# We now optimize only [eta, kappa, a].\n",
+    "# b and x0 are FIXED to 0 to improve identifiability.\n",
+    "#\n",
+    "# Rationale:\n",
+    "# - Removes collapsing boundary degeneracy (b)\n",
+    "# - Removes starting bias compensation (x0)\n",
+    "# - Forces asymmetry to be explained via drift\n",
+    "# - Improves conditioning of parameter recovery\n",
+    "#\n",
+    "# Parameter vector:\n",
+    "# paras = [eta, kappa, a]\n",
+    "\n",
     "func = lambda paras: compute_loss_parallel(\n",
     "    paras[1] * (r1_data - paras[0] * r2_data),\n",
     "    paras[1] * (paras[0] * r1_data - r2_data),\n",
@@ -419,49 +442,107 @@
     "    length_data,\n",
     "    max_d,\n",
     "    sigma,\n",
-    "    paras[2],\n",
-    "    paras[3],\n",
-    "    paras[4],\n",
+    "    paras[2],  # a\n",
+    "    0.0,       # b fixed to 0 (no collapsing bounds)\n",
+    "    0.0,       # x0 fixed to 0 (no starting bias)\n",
     ")\n",
-    "# Bounds\n",
-    "# [eta, kappa, a, b, x0]\n",
-    "# where a and b represent linear collapsing symmetrical bounds\n",
     "\n",
-    "# Original:\n",
+    "# ------------------------------------------------------------\n",
+    "# BOUNDS\n",
+    "# ------------------------------------------------------------\n",
+    "# ORIGINAL 5-PARAMETER BOUNDS (COMMENTED OUT)\n",
+    "# [eta, kappa, a, b, x0]\n",
+    "#\n",
     "# bounds = Bounds(\n",
-    "#     [0, 0, 0, 0, -np.inf], # lower\n",
-    "#     [1, np.inf, np.inf, np.inf, np.inf] # upper \n",
+    "#     [0, 0, 0, 0, -np.inf],\n",
+    "#     [1, np.inf, np.inf, np.inf, np.inf]\n",
     "# )\n",
     "\n",
-    "# Modified:\n",
+    "# ------------------------------------------------------------\n",
+    "# ORIGINAL \"LOCKED\" VERSION WITH REDUNDANT DIMENSIONS (COMMENTED OUT)\n",
+    "# These bounds forced b = 0 and x0 = 0, but still optimized\n",
+    "# over 5 dimensions and required unnecessary constraints.\n",
+    "#\n",
+    "# bounds = Bounds(\n",
+    "#     [0, 0, 0, 0, 0],\n",
+    "#     [1, np.inf, np.inf, 0, 0]\n",
+    "# )\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# UPDATED 3-PARAMETER BOUNDS\n",
+    "# ------------------------------------------------------------\n",
+    "# Only optimize over [eta, kappa, a]\n",
+    "# All constraints on b and x0 are removed because those\n",
+    "# parameters are no longer optimized.\n",
+    "#\n",
+    "# eta ∈ [0,1]\n",
+    "# kappa ≥ 0\n",
+    "# a ≥ 0\n",
+    "\n",
     "bounds = Bounds(\n",
-    "    [0, 0, 0, 0, 0], # lower\n",
-    "    [1, np.inf, np.inf, 0, 0] # upper \n",
+    "    [0, 0, 0],\n",
+    "    [1, np.inf, np.inf],\n",
     ")\n",
-    "con = LinearConstraint(\n",
-    "    [[0, 0, 1, -np.max(rt_data), 0], [0, 0, 1, 0, 1], [0, 0, 1, 0, -1]],\n",
-    "    lb=[0, 0, 0],\n",
-    "    ub=[np.inf, np.inf, np.inf],\n",
-    ")\n",
-    "initial_guess = [0.5, 1, 1.0, 0.0, 0.0]\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# LINEAR CONSTRAINTS\n",
+    "# ------------------------------------------------------------\n",
+    "# ORIGINAL CONSTRAINTS (COMMENTED OUT)\n",
+    "#\n",
+    "# These enforced:\n",
+    "# 1) a - max(rt)*b ≥ 0  (collapsing boundary validity)\n",
+    "# 2) |x0| ≤ a          (initial state inside bounds)\n",
+    "#\n",
+    "# con = LinearConstraint(\n",
+    "#     [[0, 0, 1, -np.max(rt_data), 0],\n",
+    "#      [0, 0, 1, 0, 1],\n",
+    "#      [0, 0, 1, 0, -1]],\n",
+    "#     lb=[0, 0, 0],\n",
+    "#     ub=[np.inf, np.inf, np.inf],\n",
+    "# )\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# UPDATED: NO LINEAR CONSTRAINTS NEEDED\n",
+    "# ------------------------------------------------------------\n",
+    "# Since b = 0 and x0 = 0 are fixed:\n",
+    "# - Boundary collapse constraint is irrelevant\n",
+    "# - Starting point constraint is automatically satisfied\n",
+    "# - a ≥ 0 is already enforced by bounds\n",
+    "#\n",
+    "# Therefore we REMOVE LinearConstraint entirely.\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# INITIAL GUESS\n",
+    "# ------------------------------------------------------------\n",
+    "# ORIGINAL 5-PARAMETER GUESS (COMMENTED OUT)\n",
+    "# initial_guess = [0.5, 1, 1.0, 0.0, 0.0]\n",
+    "\n",
+    "# Updated 3-parameter guess\n",
+    "initial_guess = [0.5, 1, 1.0]\n",
+    "\n",
     "print(\"Initial guess:\", initial_guess)\n",
     "print()\n",
+    "\n",
+    "# ------------------------------------------------------------\n",
+    "# OPTIMIZATION\n",
+    "# ------------------------------------------------------------\n",
     "start_time = time.time()\n",
+    "\n",
     "paras_opt_result = minimize(\n",
     "    func,\n",
     "    x0=initial_guess,\n",
     "    bounds=bounds,\n",
-    "    constraints=con,\n",
     "    method=method,\n",
     "    options={\"verbose\": 1},\n",
     ")\n",
+    "\n",
     "print(f\"Total time: {time.time() - start_time:.3f} seconds\")\n",
     "print(paras_opt_result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "a6a6b511",
    "metadata": {},
    "outputs": [
@@ -470,11 +551,9 @@
      "output_type": "stream",
      "text": [
       "True and estimated value of parameters:\n",
-      "eta: 0.50000, 0.99166\n",
-      "kappa: 2.00000, 0.78418\n",
-      "a: 2.10000, 1.52348\n",
-      "b: 0.30000, 0.21928\n",
-      "x0: 0.00000, -0.34076\n"
+      "eta: 0.50000, 0.99912\n",
+      "kappa: 2.00000, 0.57142\n",
+      "a: 1.00000, 0.72199\n"
      ]
     }
    ],
@@ -484,8 +563,8 @@
     "print(f\"eta: {eta_true:.5f}, {mle[0]:.5f}\")\n",
     "print(f\"kappa: {kappa_true:.5f}, {mle[1]:.5f}\")\n",
     "print(f\"a: {a:.5f}, {mle[2]:.5f}\")\n",
-    "print(f\"b: {b:.5f}, {mle[3]:.5f}\")\n",
-    "print(f\"x0: {x0:.5f}, {mle[4]:.5f}\")"
+    "# print(f\"b: {b:.5f}, {mle[3]:.5f}\")\n",
+    "# print(f\"x0: {x0:.5f}, {mle[4]:.5f}\")"
    ]
   },
   {
